# memory-system

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
analysis/: __init__.py  digest.py  event_analyzer.py  gist_generator.py  llm_client.py  query_engine.py
config/: alert_rules.yaml  config.yaml
ingestion/: __init__.py  agent_memory.py  base.py  file_import.py  haos_ingestion.py  server.py  social_ingestion.py
launchd/: memory.analysis.plist  memory.backup.plist  memory.digest.plist  memory.server.plist  memory.sync.plist
notifications/: __init__.py  dispatcher.py  openclaw_dispatch.py  telegram_bot.py
obsidian/: __init__.py  graph.py  writer.py
obsidian/templates/: analysis_report.md  daily_digest.md  event_card.md  query_result.md
schema/: 001_core.sql  002_semantic.sql  003_alerts.sql  004_indexes.sql
scripts/: backup.sh  setup.sh  status.sh  teardown.sh
secrets/: __init__.py  loader.py  register.py
sync/: backup.py  supabase_sync.py
tests/: test_analysis.py  test_ingestion.py  test_obsidian.py
